# textbank

./: .gitignore  Cargo.toml  MAINTENANCE.md  README.md  build.rs  crates.js  demo_repl.sh  help.html  index.html  search-index.js  settings.html  src-files.js  test_repl.sh  textbank.sh
.devcontainer/: devcontainer.json
.github/scripts/: check_criterion_regressions.py
.github/workflows/: benchmarks.yml  ci.yml  docs.yml
bench/: all.html  constant.ALPH.html  fn.main.html  fn.mk_client.html  index.html  sidebar-items.js  struct.Args.html
bench/pb/: index.html  struct.GetAllReply.html  struct.GetAllRequest.html  struct.GetReply.html  struct.GetRequest.html  struct.InternReply.html  struct.InternRequest.html  struct.SearchHit.html  struct.SearchReply.html  struct.SearchRequest.html  struct.Translation.html
benches/: store_bench.rs
proto/: text_bank.proto
repl/: all.html  constant.HELP_TEXT.html  fn.connect_to_service.html  fn.handle_command.html  fn.handle_get_command.html  fn.handle_getall_command.html  fn.handle_intern_command.html  fn.handle_search_command.html  fn.handle_stats_command.html  fn.main.html  fn.run_repl.html  fn.split_command_line.html  fn.start_textbank_service.html  index.html  sidebar-items.js
search.desc/bench/: bench-desc-0-.js
search.desc/repl/: repl-desc-0-.js
search.desc/textbank/: textbank-desc-0-.js
search.index/: 00089c5c3cab.js  00cf2d2dd6e6.js  055d72a42cf1.js  062f3b579703.js  06ff001a487e.js  0873d66fd564.js  0e0d42009c7c.js  0e8380be8ce3.js  0ee5337ee1ad.js  12861e84f5fa.js  13fd2e7439ca.js  141453ef7cd6.js  1477a2ff8d9f.js  150061624b94.js  15ff4b0d4d16.js  16a177b36b55.js  186b628efcaa.js  1a78d059df57.js  1bef342642da.js  1c6e4e97f667.js  1ca99e2dc3ec.js  22baa5b1021c.js  23868b06850f.js  24a6786f0d60.js  25165558fb39.js  2530aa32412a.js  258a6d03e077.js  26bdaf7aa49c.js  2733cfb36c3b.js  2ae535339ea4.js  2c3882f97890.js  2d35f3b950c1.js  2d991401a08f.js  2ec1b327a9bf.js  30c8c4eebc60.js  31ea1cec63d3.js  34773daf9cc5.js  3598b313e8e9.js  36451c0bc298.js  36603db0307d.js  (+41 more)
search.index/crateNames/: 6d78c22a2b32.js
search.index/desc/: 2b09a5da380e.js  6970b28512d3.js
search.index/entry/: 6fa4b17fac48.js  84f0a980c1bf.js  86a8edd95011.js
search.index/function/: 8b6bd223f923.js  a013ac49ddf5.js  a40ea5d5b1f2.js
src/: lib.rs  main.rs
textbank/: all.html  enum.WalDurability.html  fn.main.html  index.html  sidebar-items.js  struct.RevEntry.html  struct.Store.html  struct.Svc.html  struct.Wal.html  struct.WalRecord.html  type.ForwardLookup.html  type.ReverseLookup.html
(+71 files in other folders)
